force-app/main/default/objects/Portfolio_Contact__c/Portfolio_Contact__c.object-meta.xml
<CustomObject>
<label>Portfolio Contact</label><pluralLabel>Portfolio Contacts</pluralLabel>
<nameField><label>Contact Ref</label><type>AutoNumber</type><displayFormat>PC-{00000}</displayFormat><startingNumber>1</startingNumber></nameField>
<sharingModel>Private</sharingModel>
<enableActivities>false</enableActivities>
</CustomObject>