force-app/main/default/objects/Portfolio_Contact__c/fields/Message__c.field-meta.xml
<CustomField><fullName>Message__c</fullName><label>Message</label><type>LongTextArea</type><length>5000</length><visibleLines>6</visibleLines></CustomField>