force-app/main/default/objects/Portfolio_Contact__c/fields/Name__c.field-meta.xml
<CustomField><fullName>Name__c</fullName><label>Name</label><type>Text</type><length>120</length><required>false</required></CustomField>