force-app/main/default/objects/Portfolio_Contact__c/fields/Phone__c.field-meta.xml
<CustomField><fullName>Phone__c</fullName><label>Phone</label><type>Text</type><length>30</length></CustomField>