force-app/main/default/objects/Portfolio_Contact__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><label>Status</label><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>New</fullName><default>true</default><label>New</label></value><value><fullName>In Progress</fullName><default>false</default><label>In Progress</label></value><value><fullName>Closed</fullName><default>false</default><label>Closed</label></value></valueSetDefinition></valueSet></CustomField>