force-app/main/default/objects/Portfolio_Contact__c/fields/Subject__c.field-meta.xml
<CustomField><fullName>Subject__c</fullName><label>Subject</label><type>Text</type><length>150</length></CustomField>